opam-version: "1.2"
version: "0.1"
maintainer: "Adrien Guatto <adrien@guatto.org>"
authors: ["Adrien Guatto <adrien@guatto.org>"]
homepage: "https://github.com/adrieng/veezuh"
license: "ISC"
dev-repo: "https://github.com/adrieng/veezuh.git"
bug-reports: "https://github.com/adrieng/veezuh/issues"
available: [ ocaml-version >= "4.01.0"]
depends:
[
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0"}
]
depopts: []
build: [["jbuilder" "build" "-p" name "-j" jobs]]
